Bug 1183700 - Don't prevent playback of media elements in a muted tab on desktop, r=ehsan