dom/webidl/HTMLMediaElement.webidl
@@ -133,13 +133,18 @@ partial interface HTMLMediaElement {
 
   // Mozilla extension: an audio channel type for media elements.
   // Read AudioChannel.webidl for more information about this attribute.
-  [SetterThrows]
+  [SetterThrows, Pref="media.useAudioChannelAPI"]
   attribute AudioChannel mozAudioChannelType;
 
   // In addition the media element has this new events:
   // * onmozinterruptbegin - called when the media element is interrupted
   //   because of the audiochannel manager.
   // * onmozinterruptend - called when the interruption is concluded
+  [Pref="media.useAudioChannelAPI"]
+  attribute EventHandler onmozinterruptbegin;
+
+  [Pref="media.useAudioChannelAPI"]
+  attribute EventHandler onmozinterruptend;
 };
 
 #ifdef MOZ_EME
@@ -156,3 +161,11 @@ partial interface HTMLMediaElement {
   attribute EventHandler onencrypted;
 };
 #endif
+
+// This is just for testing
+partial interface HTMLMediaElement {
+  [Pref="media.useAudioChannelService.testing"]
+  readonly attribute double computedVolume;
+  [Pref="media.useAudioChannelService.testing"]
+  readonly attribute boolean computedMuted;
+};
